# codepad

./: AUTHORS  BuildInfo.txt  CMakeLists.txt  LiteEditor.workspace  README.md  mac-build.sh  make-weekly
CodeLite/: CMakeLists.txt  CodeLite.project  archive.cpp  archive_json.cpp  archive_json.h  cl_standard_paths.h  codelite_events.cpp  codelite_events.h  fileextmanager.cpp  fileextmanager.h  serialized_object.h
HelpPlugin/: HelpPluginUI.cpp  HelpPluginUI.wxcp
InnoSetup/: codelite64_mingw.iss  codelite_mingw.iss  codelite_php.iss  wxwidgets.iss
Interfaces/: ieditor.h
LiteEditor/: AboutDlg.wxcp  AboutDlg_bitmaps.cpp  CMakeLists.txt  LiteEditor.project  WelcomePage.cpp  aboutdlg.cpp  app.cpp  clInitializeDialog.cpp  cl_editor.cpp  cl_editor.h  code_parser.rc  context_manager.cpp  context_manager.h  editor_options_misc.wxcp  editorsettingsmiscbasepanel.cpp  frame.cpp  generalinfo.cpp  mainbook.cpp  mainbook.h  manager.cpp  manager.h  new_build_tab.cpp  output_pane.cpp  packages.json  tags_options_base_dlg.cpp  webupdatethread.cpp  wxcAboutDlg.cpp  wxcAboutDlg.h  wxcrafter.cpp
Plugin/: CMakeLists.txt  ColoursAndFontsManager.cpp  ColoursAndFontsManager.h  CompilersDetectorManager.cpp  Notebook.cpp  clDockingManager.cpp  clDockingManager.h  clStatusBar.cpp  clStatusBar.h  clTabRenderer.h  cl_aui_dock_art.cpp  cl_aui_dock_art.h  compile_request.cpp  editor_config.cpp  editor_config.h  globals.cpp  jsonreader.cpp  plugin_general_wxcp.cpp  plugin_general_wxcp.wxcp  plugin_general_wxcp_plugin_bitmaps.cpp  plugin_general_wxcp_plugin_bitmaps.xrc  plugin_sdk.project  sessionmanager.cpp  sessionmanager.h
Runtime/: Info.plist  index.html  (+2 more)
sdk/wxjson/: CMakeLists.txt
(+31 files in other folders)
